<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:text="@string/titleText" />

        <LinearLayout
            android:id="@+id/ll_search_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp">
            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/search_btn" />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorGray">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_vpitem1_activity_main"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/viewPagerText1" />

            <TextView
                android:id="@+id/tv_vpitem2_activity_main"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/viewPagerText2" />

            <TextView
                android:id="@+id/tv_vpitem3_activity_main"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/viewPagerText3" />

            <TextView
                android:id="@+id/tv_vpitem4_activity_main"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/viewPagerText4" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_cursor_activity_main"
            android:layout_width="20dp"
            android:layout_height="4dp"
            android:layout_alignBottom="@+id/ll"
            android:scaleType="matrix"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:persistentDrawingCache="animation"></android.support.v4.view.ViewPager>
</LinearLayout>
